make the background image to become locally linked to stylesheet

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
   font-family: 'Quicksand', sans-serif;
-  background-image: url('https://wallpapercave.com/wp/wp2010948.jpg');
+  background-image: url('../images/background.jpg');
   color: white;
   font-size: 17px;
 }
