--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h1{
   width: 108px;
   height: 32px;
   font-size: 13px;
-  box-shadow: 2px 2px #000000
+  box-shadow: 2px 2px #000000;
 }
 
 .content{
