--- a/css/style.css
+++ b/css/style.css
@@ -54,10 +54,12 @@ h1{
 
 .content{
   background-color: rgba(206, 17, 38, 0.72);
-  height: 600px;
+  /* height: 600px; */
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 10px;
+  margin-bottom: auto;
+  padding-bottom: 20px;
   box-shadow: 2px 2px #000000;
   border-radius: 0.5%;
 }
